<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_udp"
            android:title="@string/menu_udp"
            android:icon="@drawable/ic_basis" />
        <item
            android:id="@+id/nav_help_pins"
            android:title="@string/help_pins"
            android:icon="@drawable/push_pin" />
        <item
            android:id="@+id/nav_guides"
            android:title="@string/menu_guides"
            android:icon="@drawable/library_books"/>
        <item
            android:id="@+id/nav_misc"
            android:title="@string/misc"
            android:icon="@drawable/more"/>
    </group>

    <group android:id="@+id/group_divider"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/settings"/>
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"
            android:icon="@drawable/info"/>
    </group>

</menu>