<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/png"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/png" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/jpeg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jpeg"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/webp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/webp"/>

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compression_str"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/compression"
        android:textSize="18sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/compression_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:text="@string/compression_note"
        android:textColor="@color/light_gray"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/compression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1"
        app:tickVisible="false"/>

</LinearLayout>